@@ -2,6 +2,8 @@
 v2.0-git
 --------
 
+[mjr] Add ability to delete multiple slices at one time.
+[mjr] Add confirmation dialog for deleting time slices (Request #10361).
 [mjr] Implement exclusive timers (Request #12543).
 [mjr] Add ability to optionally add client, cost object, or job type to timer
       on creation.
